# MultiTargetCalib

./: CMakeLists.txt  LICENSE  README.md
config/: TUM-VI_calib_config.yaml  calib_config.yaml  euroc_calib_config.yaml  multi_target_3.yaml  multi_target_4.yaml  multi_target_5.yaml  multi_target_6.yaml
include/multitargetcalib/calibration/: calibration_helper.h  cam_calib.h
include/multitargetcalib/hash_bow/: hash_bow.h
include/multitargetcalib/optimization/: accumulator.h  linearize.h  poses_linearize.h  poses_optimize.h
include/multitargetcalib/threadpool/: threadpool.h
include/multitargetcalib/utils/: common_types.h
src/: calibrate.cpp
src/calibration/: calibraiton_helper.cpp  cam_calib.cpp
